Agrego un nuevo botón en el login

--- a/src/app/modules/auth/login/login.component.html
+++ b/src/app/modules/auth/login/login.component.html
@@ -10,4 +10,6 @@
 
   <button (click)="returnHome()">Volver a home</button>
   <button (click)="goToRegister()">Registrarme</button>
+
+  <button>Recuperar contraseña</button>
 </form>
