Agrego un botón de prueba

--- a/src/app/modules/auth/login/login.component.html
+++ b/src/app/modules/auth/login/login.component.html
@@ -12,4 +12,5 @@
   <button (click)="goToRegister()">Registrarme</button>
 
   <button>Recuperar contraseña</button>
+  <button>Prueba</button>
 </form>
